--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pimp-rimpey",
-  "version": "1.0.0",
+  "name": "pimp",
+  "version": "1.2",
   "description": "This is a clean version of the Pimp project a sandbox to put into the actual Pimp repository",
   "main": "index.js",
   "scripts": {
@@ -17,9 +17,14 @@
     "autoprefixer": "^6.1.0",
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.1.3",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^1.0.0",
     "grunt-postcss": "^0.7.1",
     "grunt-ssi": "^0.2.1",
     "pixrem": "^3.0.0",
