--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-sass": "^0.9.2",
@@ -29,6 +30,7 @@
     "grunt-sass": "^1.1.0",
     "grunt-ssi": "^0.2.1",
     "pixrem": "^3.0.0",
-    "rucksack-css": "^0.8.5"
+    "rucksack-css": "^0.8.5",
+    "slick-carousel": "^1.5.9"
   }
 }
