--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
 ### OSX ###
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+/node_modules
+/node_modules/**
+/coverage/**
+bower_components/
 
 ### FRONTEND ###
 .sass-cache/
@@ -11,3 +39,5 @@ dist/
 
 ### GH-PAGES TMP FILE ###
 src/.grunt
+
+nodemon.json
