--- a/src/package.json
+++ b/src/package.json
@@ -1,20 +1,72 @@
 {
-  "name": "pimp",
+  "name": "pimpmycause-rebuild",
   "version": "1.0.0",
-  "description": "This is a clean version of the Pimp project a sandbox to put into the actual Pimp repository",
-  "main": "index.js",
+  "contributors": [
+    {
+      "name": "Liliana Kastilio"
+    },
+    {
+      "name": "Tanya Powell"
+    },
+    {
+      "name": "Rhonda Impey"
+    },
+    {
+      "name": "Tzhe'ela Trooper"
+    },
+    {
+      "name": "Yana Bartzi"
+    }
+  ],
+  "description": "rebuild and modernisation of pimp my cause website",
+  "keywords": [
+    "cms",
+    "website",
+    "platform"
+  ],
+  "main": "./main.js",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha ./tests/*",
+    "coverage": "istanbul cover node_modules/.bin/_mocha",
+    "coveralls": "npm run-script coverage && node bin/coveralls.js < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://rimpey@bitbucket.org/rimpey/pimp-rimpey.git"
+    "url": "git+https://github.com/womenhackfornonprofits/pimpmycause-rebuild.git"
   },
   "author": "Rhonda Impey",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/rimpey/pimp-rimpey#readme",
+  "bugs": {
+    "url": "https://github.com/womenhackfornonprofits/pimpmycause-rebuild/issues"
+  },
+  "homepage": "https://github.com/womenhackfornonprofits/pimpmycause-rebuild#readme",
+  "dependencies": {
+    "async": "0.9.0",
+    "async-eventemitter": "0.2.2",
+    "cookies": "0.5.0",
+    "fakeredis": "0.3.0",
+    "formidable": "1.0.17",
+    "htmlencode": "0.0.4",
+    "locale": "0.0.20",
+    "mongodb": "2.0.33",
+    "node-uuid": "1.4.3",
+    "node.extend": "1.1.3",
+    "nodemailer": "0.5.3",
+    "npm": "2.10.1",
+    "process": "0.10.1",
+    "redis": "0.12.1",
+    "sanitize-html": "1.1.7",
+    "semver": "4.3.3",
+    "winston": "0.9.0"
+  },
   "devDependencies": {
     "autoprefixer": "^6.1.0",
+    "chai": "^3.5.0",
+    "codeclimate-test-reporter": "^0.3.0",
+    "coveralls": "^2.11.6",
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-clean": "^0.7.0",
@@ -22,15 +74,22 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-jshint": "^0.12.0",
     "grunt-contrib-uglify": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-coveralls": "^1.0.0",
+    "grunt-eslint": "^17.3.1",
     "grunt-gh-pages": "^1.0.0",
+    "grunt-mocha-istanbul": "^3.0.1",
     "grunt-postcss": "^0.7.1",
     "grunt-sass": "^1.1.0",
     "grunt-ssi": "^0.2.1",
+    "istanbul": "^0.4.2",
+    "mocha": "^2.3.4",
+    "mocha-lcov-reporter": "0.0.1",
     "pixrem": "^3.0.0",
     "rucksack-css": "^0.8.5",
+    "should": "5.0.1",
     "slick-carousel": "^1.5.9"
   }
 }
